jangaroo/jangaroo-compiler-itests/src/test/joo/error/TestCompilerErrorWithCause.as
package error {
public class TestCompilerErrorWithCause {
  public function TestCompilerErrorWithCause() {
    new TestDoesNotParse();
  }
}
}